# paper_filter

./: .gitignore  README.md  download.sh  get_eccv_papers.py  how_to_use.txt  pyproject.toml  related_papers.py  related_papers.sh  requirements.txt  test.ipynb
network/: vpngate.py
scripts/: download_papers.sh  download_resources.sh  execute_all_scripts.sh  process_related_papers.sh
src/: fetch_aaai_papers.py  fetch_cvf_papers.py  fetch_eccv_papers.py  fetch_openreview_papers.py  process_related_papers.py
