[project]
name = "paper-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "openreview-py>=1.48.1",
    "pandas>=2.2.3",
    "pytest-playwright>=0.7.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
